fix buy card issue, improve ranking displaying, create logic for nobles fetching